# fastapi-template-project

./: Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ca312e3f7f2a_create_tables.py
app/: application.py  containers.py  database.py  middlewares.py  routes.py  settings.py
app/entities/: base.py  user.py
app/models/: user.py
app/repositories/: base.py  user.py
app/schemas/: base.py  user.py
app/services/: user.py
app/utils/: database.py  decorators.py  exception_handlers.py  uow.py
app/view/: tech.py  user.py
